# zymoscope

./: .gitignore  CLAUDE.md  LICENSE  README.md
dashboard/: .env.example  docker-compose.yml  requirements.txt
dashboard/fermentabot/: config.py  db.py  mqtt_sub.py  server.py
dashboard/mosquitto/: mosquitto.conf
dashboard/templates/: batch.html  index.html
dashboard/zymoscope/: config.py  db.py  mqtt_sub.py  server.py  smart_plug.py
docs/: design.md  getting-started.md  prototype-bom.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.c
firmware/main/comms/: mqtt_client.c  mqtt_client.h  wifi_sta.c  wifi_sta.h
firmware/main/control/: pid.c  pid.h
firmware/main/display/: oled.c  oled.h
firmware/main/sensor/: bme280_i2c.c  bme280_i2c.h  ds18b20.c  ds18b20.h  hx711.c  hx711.h
hardware/: fermentabot-v2.kicad_pro  fermentabot-v2.kicad_sch  zymoscope.kicad_pro  zymoscope.kicad_sch
hardware/bom/: fermentabot-v2-bom.csv  zymoscope-bom.csv
